Add images to assets, custom fonts and custom colors Rename ViewController.swift to PhotoGridViewController.swift Create PhotoLayout.swift and PhotoLayoutProvider.swift Finish interface in both orientation and LaunchScreen
PhotoGridViewController:
Central dark blue square named gridView changes his layout according to the button tapped with didTapOnLayoutButton()
When tap on addPhotoButton in gridView the photo library is showing up with addPhotoButtons() and onPhotoButtonTapped()
Create convertGridViewAsImage()
Add swipeGestureRecognizer in view to share the gridView as an image with setupSwipeToShare() and didSwipeToShare()
Change arrowImageView, swipeToShareLabel.text and swipeGestureRecognizer.direction according to the interface orientation in traitCollectionDidChange()
Add animation when the user swipe
Create 2 PhotoGridViewController extensions with UIImagePickerControllerDelegate and UINavigationControllerDelegate

--- a/Instagrid/Supporting Files/Info.plist
+++ b/Instagrid/Supporting Files/Info.plist
@@ -60,5 +60,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We would like to access your internal storage to save this photo montage otherwise it will fail.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Delm-Medium.otf</string>
+		<string>ThirstySoftRegular.otf</string>
+	</array>
 </dict>
 </plist>
