Info.plist: Add authorization to access camera with NSCameraUsageDesription
PhotoGridViewController:
Gather the 4  IBOutlet layoutButton in 1 IBOutlet Collection layoutButtons
Remove traitCollectionDidChange with viewWillTransition
Rename setupViewsAccordingToInterfaceOrientation() to setupSwipeToShareViewsAccordingToInterfaceOrientation()
Add a private computed property isOnePhotoSourceAvailable
Optimize setupLayoutButtonBackgroundImage() with layoutButtons
Create presentSourcesNotAvailableAlert()
	   presentSourcesChoiceAlert()
	   photoAlertHandler()
	   cameraAlertHandler()
	   presentImagePickerController()
Modify onPhotoButtonTapped() with isOnePhotoSourceAvailable, presentSourcesNotAvailableAlert() and presentSourcesChoiceAlert()
Rearrange didSwipeToShare() to avoid a pyramid of doom

--- a/Instagrid/Supporting Files/Info.plist
+++ b/Instagrid/Supporting Files/Info.plist
@@ -62,6 +62,8 @@
 	</array>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>We would like to access your internal storage to save this photo montage otherwise it will fail.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We would like to access your camera to take a photo</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Delm-Medium.otf</string>
